# tevian-task

case 1 - script/: conclusions.md  pyproject.toml
case 2 - flask/: app.py  conclusions.md
