[tool.poetry]
name = "case 1 - script"
version = "0.1.0"
description = ""
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"
tqdm = "^4.66.4"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
